--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.0.1"
-
+    compileSdkVersion 20
+    buildToolsVersion '20.0.0'
     defaultConfig {
         applicationId "andm.simplecarbonfiberwatchface"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 18
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
@@ -17,10 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:+'
 }
